# tgpg

./: .gitignore  Makefile.am  README  README.SVN  TODO  autogen.rc  autogen.sh  configure.ac
build-aux/: ltmain.sh
doc/: Makefile.am
m4/: Makefile.am
src/: Makefile.am  cryptglue.c  cryptglue.h  decrypt.c  encrypt.c  error.c  keystore-static.c.sample  keystore.c  keystore.h  pkcs1.c  pkcs1.h  pktparser.c  pktparser.h  pktwriter.c  pktwriter.h  protect.c  protect.h  s2k.c  s2k.h  strerror.c  tgpg.c  tgpg.h  tgpgdefs.h  tgpgtest.c  util.c
tests/: Makefile.am  key.script  runtests.bash  tgpgtest.c
tools/: Makefile.am  tgpg-keystore.c
